--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,14 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-
+	
+	<repositories>
+		<repository>
+			<id>siemensintrarepot</id>
+			<url>http://localhost:8081/repository/siemensintrarepo/</url>
+		</repository>
+	</repositories>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,4 +66,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 </project>
