chnage host url

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<distributionManagement>
 		<repository>
 				<id>hosted</id>
-				<url>http://localhost:8081/repository/siemenshosted/</url>
+				<url>https://example:8443/repository/siemenshosted/</url>
 		</repository>
 	</distributionManagement>
 	
@@ -30,7 +30,7 @@
 	<repositories>
 		<repository>
 			<id>siemensintrarepot</id>
-			<url>http://localhost:8081/repository/siemensintrarepo/</url>
+			<url>https://example:8443/repository/siemensintrarepo/</url>
 		</repository>
 	</repositories>
 	
